# mt5-trading-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENCE  LICENSE  README.md  SECURITY.md  conftest.py  mt5-mcp-architecture.md  pyproject.toml  recording-plan.md  server.json
.claude/: settings.json
.claude/skills/mt5-market-data/: SKILL.md
.claude/skills/mt5-trading/: SKILL.md
.github/workflows/: publish-image.yml  publish.yml  test.yml
demo/: README.md  config.toml  demo.sh  mt5-mcp-demo.cast
deploy/: .env.example  Dockerfile  docker-compose.yml  start.sh
docs/: agents.md  clients.md  configuration.md  deployment.md  installation.md  tools.md
docs/superpowers/plans/: 2026-04-24-phase-1-skeleton-and-read-tools.md  2026-04-26-phase-2-mutating-tools-and-policy-engine.md  2026-04-27-phase-3-resources-and-http-transport.md  2026-04-28-phase-4-polish-and-release.md  2026-04-28-phase-5-integration-testing.md
docs/superpowers/specs/: 2026-04-26-phase-2-mutating-tools-and-policy-engine-design.md  2026-04-27-phase-3-resources-and-http-transport-design.md  2026-04-28-claude-code-agent-setup-design.md  2026-04-28-phase-4-polish-and-release-design.md  2026-04-28-phase-5-integration-testing-design.md
examples/: config.toml.example  docker-compose.yml
examples/clients/: claude-code.json  claude-desktop-http.json  claude-desktop-stdio.json  codex.toml  hermes.json  openclaw.json
examples/vps/: install-mt5-mcp-task.ps1  setup-vps.ps1
src/mt5_mcp/: __init__.py  __main__.py  config.py  errors.py  server.py  transport.py  types.py
src/mt5_mcp/adapter/: __init__.py  comment.py  conversions.py  mt5_client.py  symbols.py
src/mt5_mcp/cli/: __init__.py  doctor.py  export_symbols.py
src/mt5_mcp/policy/: __init__.py  audit.py  consent.py  engine.py  idempotency.py  preflight.py
src/mt5_mcp/resources/: __init__.py  account.py  positions.py  quotes.py
src/mt5_mcp/streaming/: __init__.py  dispatcher.py  poller.py  snapshots.py
src/mt5_mcp/tools/: __init__.py  _common.py  account.py  history.py  market.py  orders.py  positions.py  system.py
tests/: _resource_helpers.py  conftest.py  fakes.py  test_adapter_comment.py  test_adapter_conversions.py  test_adapter_mt5_client.py  test_adapter_symbols.py  test_cli_doctor.py  test_cli_export_symbols.py  test_config.py  test_doctor_streaming.py  test_errors.py  test_main_cli.py  test_policy_audit.py  test_policy_consent.py  test_policy_engine.py  test_policy_idempotency.py  test_policy_preflight.py  test_resources_account.py  test_resources_positions.py  test_resources_quotes.py  test_resources_subscribe.py  test_server_appcontext.py  test_server_bootstrap.py  test_streaming_dispatcher.py  test_streaming_poller.py  test_streaming_snapshots.py  test_tools_account.py  test_tools_cancel_order.py  test_tools_close_position.py  test_tools_history.py  test_tools_market.py  test_tools_modify_order.py  test_tools_orders.py  test_tools_place_order.py  test_tools_positions.py  test_tools_system.py  test_transport.py  test_transport_http_integration.py  test_types.py
tests/integration/: .env.example  __init__.py  conftest.py  test_lifecycle_live.py  test_read_tools_live.py
