[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mt5-trading-mcp"
version = "1.1.0"
description = "Model Context Protocol server wrapping the MetaTrader 5 Python library."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Vincent Wongso Saputro", email = "vincent.wongso.saputro@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "mcp[cli]>=1.12",
  "pydantic>=2.6",
  "watchdog>=4.0",
  "tomli>=2.0; python_version < '3.11'",
  "MetaTrader5>=5.0.45; platform_system == 'Windows'",
  "platformdirs>=4.0",
  "python-ulid>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "freezegun>=1.4",
  "httpx>=0.27",
]
# Linux: connect to an MT5 terminal running in the gmag11/metatrader5_vnc
# Docker container over RPyC. The client's rpyc must be protocol-compatible
# with the container's server; see the README Linux setup for version notes.
bridge = [
  "mt5linux",
]

[project.scripts]
mt5-mcp = "mt5_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/vincentwongso/mt5-trading-mcp"
Issues = "https://github.com/vincentwongso/mt5-trading-mcp/issues"
Changelog = "https://github.com/vincentwongso/mt5-trading-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mt5_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: marks tests requiring a live HTTP server (deselect with -m 'not integration')",
]
