[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mt5-trading-mcp"
version = "1.4.1"
description = "MCP server for MetaTrader 5: let an AI agent read market data, watch trades, and place real trades - behind a consent/audit safety layer. Windows + Linux (Docker)."
readme = "README.md"
keywords = [
  "mcp",
  "model-context-protocol",
  "metatrader5",
  "mt5",
  "metatrader",
  "trading",
  "forex",
  "cfd",
  "ai-agent",
  "llm",
  "fastmcp",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vincent Wongso Saputro", email = "vincent.wongso.saputro@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: AsyncIO",
]
dependencies = [
  "mcp[cli]>=1.12",
  "pydantic>=2.6",
  "watchdog>=4.0",
  "tomli>=2.0; python_version < '3.11'",
  "MetaTrader5>=5.0.45; platform_system == 'Windows'",
  "platformdirs>=4.0",
  "python-ulid>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "freezegun>=1.4",
  "httpx>=0.27",
]
# Linux ALTERNATIVE (host-side bridge): connect to an MT5 terminal running in
# the gmag11/metatrader5_vnc Docker container over RPyC. The recommended Linux
# path is the all-in-one image (no bridge); see docs/installation.md. The
# client's rpyc must be protocol-compatible with the container's server, which
# can need manual version-matching (see the bridge version note in the docs).
bridge = [
  "mt5linux",
]

[project.scripts]
mt5-mcp = "mt5_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/vincentwongso/mt5-trading-mcp"
Repository = "https://github.com/vincentwongso/mt5-trading-mcp"
Documentation = "https://github.com/vincentwongso/mt5-trading-mcp/tree/main/docs"
Issues = "https://github.com/vincentwongso/mt5-trading-mcp/issues"
Changelog = "https://github.com/vincentwongso/mt5-trading-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mt5_mcp"]

[tool.hatch.build.targets.sdist]
# Keep the published source distribution lean: the wheel only needs src/, and
# the demo media / social card / CI + editor configs are GitHub-only assets.
exclude = [
  "demo",
  ".github",
  ".claude",
]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: marks tests requiring a live HTTP server (deselect with -m 'not integration')",
]
